Update and rename 智慧党建.html to index.html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>智慧党建</title>
 </head>
-<body>
+<body>index
   <div class="html">
   <!-- 头部 -->
   <div class="header">
