--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>智慧党建</title>
 </head>
-<body>index
+<body>
   <div class="html">
   <!-- 头部 -->
   <div class="header">
@@ -30,13 +30,13 @@
 <div class="tabs w">
   <ul class="tabsnav">
     <li>
-      <a href="./智慧党建.html">首页</a>
+      <a href="./index.html">首页</a>
     </li>
     <li>
-      <a href="./党建动态.html">党建动态</a>
+      <a href="./dynamics.html">党建动态</a>
     </li>
     <li>
-      <a href="./大美中国.html">大美中国</a>
+      <a href="./Beauty.html">大美中国</a>
     </li>
     <li>
       <a href="#">专题专栏</a>
@@ -69,7 +69,7 @@
       <a href="#">积分统计</a>
     </li>
     <li>
-      <a href="./基层党建.html">基层党建</a>
+      <a href="./Grassroots.html">基层党建</a>
       <ul>
         <li><a href="#">综合</a></li>
         <li><a href="#">农村</a></li>
@@ -559,10 +559,10 @@
     <div class="linkname">
       <dl>
         <dt>智慧党建云平台</dt>
-          <dd>党建网版权所有   转载请注明来源</dd>
-          <dd> 互联网新闻信息服务许可证（14564564563） 信息网络传播视听节目许可证（45612378）</dd>
-          <dd> 版权所有 Copyright© 党建网 京ICP备000001号-1</dd>
-          <dd>技术支持：新华网 </dd>
+          <dd>此版权为学习所有   转载请注明来源</dd>
+          <dd> 互联网新闻信息服务许可证（14564xxxxx） 信息网络传播视听节目许可证（4xxx2378）</dd>
+          <dd> 版权所有 Copyright© XX网 xxxx000001号-1</dd>
+          <dd>技术支持：xx网 </dd>
       </dl>
     </div>
   </div>
