Update and rename 党建动态.html to dynamics.html

--- a/dynamics.html
+++ b/dynamics.html
@@ -30,13 +30,13 @@
 <div class="tabs w">
   <ul class="tabsnav">
     <li>
-      <a href="./智慧党建.html">首页</a>
+      <a href="./index.html">首页</a>
     </li>
     <li>
-      <a href="./党建动态.html">党建动态</a>
+      <a href="./dynamics.html">党建动态</a>
     </li>
     <li>
-      <a href="./大美中国.html">大美中国</a>
+      <a href="./Beauty.html">大美中国</a>
     </li>
     <li>
       <a href="#">专题专栏</a>
@@ -69,7 +69,7 @@
       <a href="#">积分统计</a>
     </li>
     <li>
-      <a href="./基层党建.html">基层党建</a>
+      <a href="./Grassroots.html">基层党建</a>
       <ul>
         <li><a href="#">综合</a></li>
         <li><a href="#">农村</a></li>
