--- a/Beauty.html
+++ b/Beauty.html
@@ -72,7 +72,7 @@
             <a href="#">积分统计</a>
           </li>
           <li>
-            <a href="./6rassroots.html">基层党建</a>
+            <a href="./Grassroots.html">基层党建</a>
             <ul>
               <li><a href="#">综合</a></li>
               <li><a href="#">农村</a></li>
